<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>edu.hm.hafner</groupId>
    <artifactId>codingstyle-pom</artifactId>
    <version>6.4.0</version>
    <relativePath/>
  </parent>

  <groupId>edu.hm.hafner</groupId>
  <artifactId>quality-monitor</artifactId>
  <version>4.1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Quality Monitor GitHub Action</name>
  <description>
    Automated quality monitoring for GitHub pull requests and branch pipelines.
    The action aggregates test results, code and mutation coverage, static analysis findings,
    and software metrics, then posts a structured pull request comment and GitHub Checks summary.
    When enabled, it also adds inline line comments for warnings, missed or mutated lines.
  </description>

  <scm>
    <connection>scm:git:https://github.com/uhafner/quality-monitor.git</connection>
    <developerConnection>scm:git:git@github.com:uhafner/quality-monitor.git</developerConnection>
    <url>https://github.com/uhafner/quality-monitor</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <module.name>${project.groupId}.quality.monitor</module.name>
    <docker-image-tag>${project.version}</docker-image-tag>

    <java.version>25</java.version>

    <autograding-model.version>10.3.0</autograding-model.version>
    <github-api.version>1.330</github-api.version>
    <testcontainers.version>2.0.3</testcontainers.version>

    <jib-maven-plugin.version>3.5.1</jib-maven-plugin.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>edu.hm.hafner</groupId>
      <artifactId>autograding-model</artifactId>
      <version>${autograding-model.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.errorprone</groupId>
          <artifactId>error_prone_annotations</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-annotations</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
        </exclusion>
        <exclusion>
          <artifactId>codingstyle</artifactId>
          <groupId>edu.hm.hafner</groupId>
        </exclusion>
        <exclusion>
          <artifactId>streamex</artifactId>
          <groupId>one.util</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.kohsuke</groupId>
      <artifactId>github-api</artifactId>
      <version>${github-api.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <artifactId>jackson-annotations</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-annotations</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>@{argLine} --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>${jib-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>local-docker</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>dockerBuild</goal>
            </goals>
          </execution>
          <execution>
            <id>docker-io</id>
            <phase>install</phase>
            <goals>
              <goal>build</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <to>
            <image>docker.io/uhafner/quality-monitor</image>
            <tags>
              <tag>${docker-image-tag}</tag>
              <tag>v${docker-image-tag}</tag>
            </tags>
            <auth>
              <username>${env.DOCKER_IO_USERNAME}</username>
              <password>${env.DOCKER_IO_PASSWORD}</password>
            </auth>
          </to>
          <from>
            <image>maven:3.9.12-eclipse-temurin-25-alpine@sha256:c36ce99a7301bbd39e3a1aa5883b0e31b19b6101a7c4c44625dc4e6dbfbbc22b</image>
            <platforms>
              <platform>
                <architecture>amd64</architecture>
                <os>linux</os>
              </platform>
              <platform>
                <architecture>arm64</architecture>
                <os>linux</os>
              </platform>
            </platforms>
          </from>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.revapi</groupId>
        <artifactId>revapi-maven-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.openrewrite.maven</groupId>
          <artifactId>rewrite-maven-plugin</artifactId>
          <configuration>
            <activeRecipes combine.children="append">
              <recipe>org.openrewrite.java.migrate.UpgradeToJava25</recipe>
            </activeRecipes>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
